--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
 AddDefaultCharset UTF-8
 ServerSignature Off
-RewriteEngine On
 Options -Indexes -MultiViews +FollowSymLinks
 RewriteOptions InheritDownBefore
 <IfModule mod_headers.c>
@@ -9,169 +8,19 @@ RewriteOptions InheritDownBefore
     Header always unset X-Powered-By
     Header always unset X-Pingback
     Header always set X-Content-Type-Options "nosniff"
-    <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|css|swf|webp|webm|avif|woff|woff2|jxl|ttf|ttc|otf|eot|svg|js|mjs)$">
-        Header set Cache-Control "max-age=31536000, public, immutable"
-        Header set Access-Control-Allow-Origin "*"
-    </FilesMatch>
-</IfModule>
-<IfModule mod_mime.c>
-    AddType application/atom+xml                atom
-    AddType application/json                    json map topojson
-    AddType application/ld+json                 jsonld
-    AddType application/rss+xml                 rss
-    AddType application/geo+json                geojson
-    AddType application/rdf+xml                 rdf
-    AddType application/xml                     xml
-    AddType application/javascript              js mjs
-    AddType application/manifest+json           webmanifest
-    AddType application/x-web-app-manifest+json webapp
-    AddType text/cache-manifest                 appcache
-    AddType audio/mp4                           f4a f4b m4a
-    AddType audio/ogg                           oga ogg opus
-    AddType image/avif                          avif avifs
-    AddType image/bmp                           bmp
-    AddType image/jxl                           jxl
-    AddType image/svg+xml                       svg svgz
-    AddType image/webp                          webp
-    AddType video/mp4                           f4v f4p m4v mp4
-    AddType video/ogg                           ogv
-    AddType video/webm                          webm
-    AddType video/x-flv                         flv
-    AddType image/x-icon                        cur ico
-    AddType application/wasm                    wasm
-    AddType font/woff                           woff
-    AddType font/woff2                          woff2
-    AddType font/eot                            eot
-    AddType font/ttf                            ttf
-    AddType font/collection                     ttc
-    AddType font/otf                            otf
-    AddType application/octet-stream            safariextz
-    AddType application/x-bb-appworld           bbaw
-    AddType application/x-chrome-extension      crx
-    AddType application/x-opera-extension       oex
-    AddType application/x-xpinstall             xpi
-    AddType text/calendar                       ics
-    AddType text/markdown                       markdown md
-    AddType text/vcard                          vcard vcf
-    AddType text/vnd.rim.location.xloc          xloc
-    AddType text/vtt                            vtt
-    AddType text/x-component                    htc
-    AddCharset utf-8 \
-    .appcache \
-    .bbaw \
-    .css \
-    .htc \
-    .ics \
-    .js \
-    .json \
-    .manifest \
-    .map \
-    .markdown \
-    .md \
-    .mjs \
-    .topojson \
-    .vtt \
-    .vcard \
-    .vcf \
-    .webmanifest \
-    .xloc
-</IfModule>
-<IfModule mod_deflate.c>
-    <IfModule mod_setenvif.c>
-        <IfModule mod_headers.c>
-            SetEnvIfNoCase ^(Accept-EncodXng|X-cept-Encoding|X{15}|~{15}|-{15})$ ^((gzip|deflate)\s*,?\s*)+|[X~-]{4,13}$ HAVE_Accept-Encoding
-            RequestHeader append Accept-Encoding "gzip,deflate" env=HAVE_Accept-Encoding
-        </IfModule>
-    </IfModule>
-    <IfModule mod_filter.c>
-        AddOutputFilterByType DEFLATE \
-        "font/woff" \
-        "font/woff2" \
-        "application/atom+xml" \
-        "application/javascript" \
-        "application/json" \
-        "application/ld+json" \
-        "application/manifest+json" \
-        "application/rdf+xml" \
-        "application/rss+xml" \
-        "application/schema+json" \
-        "application/geo+json" \
-        "application/vnd.ms-fontobject" \
-        "application/wasm" \
-        "application/x-font-ttf" \
-        "application/x-javascript" \
-        "application/x-web-app-manifest+json" \
-        "application/xhtml+xml" \
-        "application/xml" \
-        "font/eot" \
-        "font/opentype" \
-        "font/otf" \
-        "font/ttf" \
-        "image/bmp" \
-        "image/svg+xml" \
-        "image/vnd.microsoft.icon" \
-        "image/x-icon" \
-        "text/cache-manifest" \
-        "text/calendar" \
-        "text/css" \
-        "text/html" \
-        "text/javascript" \
-        "text/plain" \
-        "text/markdown" \
-        "text/vcard" \
-        "text/vnd.rim.location.xloc" \
-        "text/vtt" \
-        "text/x-component" \
-        "text/x-cross-domain-policy" \
-        "text/xml"
-    </IfModule>
-    <IfModule mod_mime.c>
-        AddEncoding gzip svgz
-    </IfModule>
-</IfModule>
-<IfModule mod_expires.c>
-    ExpiresActive on
-    ExpiresDefault                                    "access plus 1 month"
-    ExpiresByType image/vnd.microsoft.icon            "access plus 1 week"
-    ExpiresByType image/x-icon                        "access plus 1 week"
-    ExpiresByType application/manifest+json           "access plus 1 week"
-    ExpiresByType application/x-web-app-manifest+json "access"
-    ExpiresByType text/cache-manifest                 "access"
-    ExpiresByType application/atom+xml                "access plus 1 hour"
-    ExpiresByType application/rdf+xml                 "access plus 1 hour"
-    ExpiresByType application/rss+xml                 "access plus 1 hour"
-    ExpiresByType text/html                           "access"
-    ExpiresByType text/markdown                       "access"
-    ExpiresByType text/calendar                       "access"
-    ExpiresByType text/x-cross-domain-policy          "access plus 1 week"
-    ExpiresByType application/json                    "access"
-    ExpiresByType application/ld+json                 "access"
-    ExpiresByType application/schema+json             "access"
-    ExpiresByType application/geo+json                "access"
-    ExpiresByType application/xml                     "access"
-    ExpiresByType text/xml                            "access"
-    ExpiresByType application/wasm                    "access plus 1 year"
-    ExpiresByType application/javascript              "access plus 1 year"
-    ExpiresByType application/x-javascript            "access plus 1 year"
-    ExpiresByType text/javascript                     "access plus 1 year"
-    ExpiresByType text/css                            "access plus 1 year"
-    ExpiresByType audio/*                             "access plus 1 year"
-    ExpiresByType image/*                             "access plus 1 year"
-    ExpiresByType video/*                             "access plus 1 year"
-    ExpiresByType font/*                              "access plus 1 year"
-    ExpiresByType application/font-woff               "access plus 1 year"
-    ExpiresByType application/font-woff2              "access plus 1 year"
 </IfModule>
 <IfModule mod_rewrite.c>
+    RewriteEngine On
+
     # разрешаем .well-known
     RewriteRule ^\.well-known/ - [L,NC]
 
     # скрываем все что начинается с точки
     RewriteRule (^|/)\. - [R=404,L]
 
-    # скрываем с слишком коротким User-Agent (менее 10 символов)
-    RewriteCond %{HTTP_USER_AGENT} "^.{0,9}$"
-    RewriteRule .* - [R=404,L]
+    # скрываем с пустым user agent
+    RewriteCond %{HTTP_USER_AGENT} ^(-)?$
+    RewriteRule .* - [F,L]
 
     # скрываем по имени директории
     RewriteRule ^.*/(upgrade|backup|backups|vendor|node_modules|logs|tmp|temp|bin)/.* - [R=404,L,NC]
